--- a/Vidly2/Vidly2.csproj
+++ b/Vidly2/Vidly2.csproj
@@ -202,8 +202,30 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812271645060_InitialModel.cs" />
+    <Compile Include="Migrations\201812271645060_InitialModel.Designer.cs">
+      <DependentUpon>201812271645060_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812271717381_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201812271717381_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201812271717381_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812271721251_AddMembershipType.cs" />
+    <Compile Include="Migrations\201812271721251_AddMembershipType.Designer.cs">
+      <DependentUpon>201812271721251_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812271727251_PopulateMemberhipTypes.cs" />
+    <Compile Include="Migrations\201812271727251_PopulateMemberhipTypes.Designer.cs">
+      <DependentUpon>201812271727251_PopulateMemberhipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812271736094_ApplyAnnotationsToCustomer.cs" />
+    <Compile Include="Migrations\201812271736094_ApplyAnnotationsToCustomer.Designer.cs">
+      <DependentUpon>201812271736094_ApplyAnnotationsToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -213,6 +235,7 @@
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -275,6 +298,7 @@
     <Content Include="Views\Shared\_NavBarPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Edit.cshtml" />
+    <Content Include="Views\Home\Dump.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -291,6 +315,23 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201812271645060_InitialModel.resx">
+      <DependentUpon>201812271645060_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812271717381_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201812271717381_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812271721251_AddMembershipType.resx">
+      <DependentUpon>201812271721251_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812271727251_PopulateMemberhipTypes.resx">
+      <DependentUpon>201812271727251_PopulateMemberhipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812271736094_ApplyAnnotationsToCustomer.resx">
+      <DependentUpon>201812271736094_ApplyAnnotationsToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
